--- a/proyectLibraries/package.json
+++ b/proyectLibraries/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "handlebars": "^4.7.8"
   }
 }
